--- a/employeedetails.html
+++ b/employeedetails.html
@@ -21,6 +21,7 @@
    <input type="textarea" id="address" placeholder='address'/>
   <button id="addemployee" type="button" class="btn btn-primary" >add</button>
   <button id="listofemployee" type="button" class="btn btn-primary">list of employees</button>
+   <input id="myInput" type="text" placeholder="Search..">
   <table id="emp" border="1" class="table table-striped">
     <tr class="table-success">
       <th>employeeid</th>
